# vpnet-mnist-2d

./: LICENSE  mypy.ini  pyproject.toml  ruff.toml
char_recognition/: data_loader.py  model_training.py  optuna_results.csv
char_recognition/mnist/: mnist_optuna_routine.py  mnist_optuna_viz.py  mnist_recognition.py
vpnet/: __init__.py  networks.py  vp_functions.py
