[project]
name = "vpnet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "scipy",
    "numpy",
    "torch",
    "mypy>=1.18.2",
    "scipy-stubs>=1.16.2.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "imageio>=2.37.0",
    "seaborn>=0.13.2",
    "optuna>=4.7.0",
]
